--- a/package.json
+++ b/package.json
@@ -13,18 +13,11 @@
     "node": "^20.19.0 || >=22.12.0"
   },
   "devDependencies": {
-    "@eslint/js": "^9.37.0",
-    "@eslint/json": "^0.13.2",
-    "eslint": "^9.37.0",
-    "eslint-plugin-react": "^7.37.5",
-    "globals": "^16.4.0",
     "husky": "^9.1.7",
-    "jiti": "^2.6.1",
     "lint-staged": "^16.2.4",
     "prettier": "^3.6.2",
     "turbo": "^2.5.8",
-    "typescript": "^5.9.3",
-    "typescript-eslint": "^8.46.0"
+    "typescript": "^5.9.3"
   },
   "lint-staged": {
     "*": [
