--- a/packages/plugin-react/package.json
+++ b/packages/plugin-react/package.json
@@ -1,14 +1,26 @@
 {
   "name": "@toolbox/plugin-react",
-  "version": "0.0.0",
+  "version": "0.1.0",
   "description": "A dazum plugin for react projects",
   "type": "module",
+  "scripts": {
+    "build": "pnpm check-types && tsup",
+    "check-types": "tsc --noEmit",
+    "format": "prettier --write .",
+    "lint": "eslint .",
+    "lint:fix": "eslint . --fix"
+  },
   "author": "Dazum Dev <dazum.dev@gmail.com>",
   "license": "MIT",
   "engines": {
     "node": "^20.19.0 || >=22.12.0"
   },
-  "scripts": {},
+  "exports": {
+    ".": {
+      "types": "./dist/index.d.mts",
+      "default": "./dist/index.mjs"
+    }
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/dazum-dev/toolbox.git",
@@ -18,5 +30,15 @@
     "url": "https://github.com/dazum-dev/toolbox/issues"
   },
   "homepage": "https://github.com/dazum-dev/toolbox/tree/main/packages/plugin-react#readme",
-  "dependencies": {}
+  "dependencies": {
+    "@toolbox/eslint-config": "workspace:*",
+    "@rollup/pluginutils": "^5.3.0",
+    "@swc/core": "^1.13.5",
+    "get-tsconfig": "^4.12.0",
+    "rollup": "^4.52.4",
+    "tsup": "^8.5.0"
+  },
+  "devDependencies": {
+    "@types/node": "^24.7.2"
+  }
 }
