--- a/packages/plugin-react/package.json
+++ b/packages/plugin-react/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@toolbox/plugin-react",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "description": "A dazum plugin for react projects",
   "type": "module",
   "scripts": {
@@ -17,8 +17,8 @@
   },
   "exports": {
     ".": {
-      "types": "./dist/index.d.mts",
-      "default": "./dist/index.mjs"
+      "types": "./dist/index.d.ts",
+      "default": "./dist/index.js"
     }
   },
   "repository": {
