feat(nx): setup workspace

--- a/nx.json
+++ b/nx.json
@@ -1,4 +1,12 @@
 {
   "$schema": "./node_modules/nx/schemas/nx-schema.json",
-  "nxCloudId": "68f3fb6c6f40db247a92c695"
+  "nxCloudId": "68f3fb6c6f40db247a92c695",
+  "namedInputs": {
+    "sharedGlobals": [
+      "{workspaceRoot}/.github/workflows/ci.yml"
+    ],
+    "default": [
+      "sharedGlobals"
+    ]
+  }
 }
