--- a/nx.json
+++ b/nx.json
@@ -2,11 +2,33 @@
   "$schema": "./node_modules/nx/schemas/nx-schema.json",
   "nxCloudId": "68f3fb6c6f40db247a92c695",
   "namedInputs": {
-    "sharedGlobals": [
-      "{workspaceRoot}/.github/workflows/ci.yml"
-    ],
-    "default": [
-      "sharedGlobals"
-    ]
-  }
+    "sharedGlobals": ["{workspaceRoot}/.github/workflows/ci.yml"],
+    "default": ["sharedGlobals"]
+  },
+  "plugins": [
+    {
+      "plugin": "@nx/js/typescript",
+      "options": {
+        "typecheck": {
+          "targetName": "typecheck"
+        },
+        "build": {
+          "targetName": "build",
+          "configName": "tsconfig.lib.json",
+          "buildDepsName": "build-deps",
+          "watchDepsName": "watch-deps"
+        }
+      },
+      "exclude": ["packages/typescript-config/*"]
+    },
+    {
+      "plugin": "@nx/js/typescript",
+      "include": ["packages/typescript-config/*"],
+      "options": {
+        "typecheck": {
+          "targetName": "typecheck"
+        }
+      }
+    }
+  ]
 }
