--- a/package.json
+++ b/package.json
@@ -3,18 +3,36 @@
   "version": "0.1.0",
   "private": true,
   "type": "module",
+  "author": "Dazum Dev <dazum.dev@gmail.com>",
+  "license": "MIT",
   "scripts": {
     "nx": "nx",
     "prepare": "husky"
   },
   "packageManager": "pnpm@8.15.6",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/dazum-dev/toolbox.git"
+  },
+  "bugs": {
+    "url": "https://github.com/dazum-dev/toolbox/issues"
+  },
   "homepage": "https://github.com/dazum-dev/toolbox",
   "engines": {
     "node": "^20.19.0 || >=22.12.0"
   },
   "devDependencies": {
+    "@nx/js": "21.6.5",
     "@nx/workspace": "^21.6.5",
+    "@swc-node/register": "~1.9.1",
+    "@swc/core": "~1.5.7",
+    "@swc/helpers": "~0.5.11",
+    "@types/node": "20.19.9",
     "husky": "^9.1.7",
-    "nx": "21.6.5"
-  }
+    "nx": "21.6.5",
+    "prettier": "^2.6.2",
+    "tslib": "^2.3.0",
+    "typescript": "~5.9.2"
+  },
+  "dependencies": {}
 }
