--- a/package.json
+++ b/package.json
@@ -22,12 +22,14 @@
     "node": "^20.19.0 || >=22.12.0"
   },
   "devDependencies": {
+    "@nx/eslint": "21.6.5",
     "@nx/js": "21.6.5",
     "@nx/workspace": "^21.6.5",
     "@swc-node/register": "~1.9.1",
     "@swc/core": "~1.5.7",
     "@swc/helpers": "~0.5.11",
     "@types/node": "20.19.9",
+    "eslint": "~8.57.0",
     "husky": "^9.1.7",
     "nx": "21.6.5",
     "prettier": "^2.6.2",
