feat(lint): setup

--- a/package.json
+++ b/package.json
@@ -23,13 +23,17 @@
   },
   "devDependencies": {
     "@nx/eslint": "21.6.5",
+    "@nx/eslint-plugin": "21.6.5",
     "@nx/js": "21.6.5",
     "@nx/workspace": "^21.6.5",
     "@swc-node/register": "~1.9.1",
     "@swc/core": "~1.5.7",
     "@swc/helpers": "~0.5.11",
     "@types/node": "20.19.9",
+    "@typescript-eslint/eslint-plugin": "^7.16.0",
+    "@typescript-eslint/parser": "^7.16.0",
     "eslint": "~8.57.0",
+    "eslint-config-prettier": "^10.0.0",
     "husky": "^9.1.7",
     "nx": "21.6.5",
     "prettier": "^2.6.2",
