--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -1,3 +1,8 @@
 {
-  "extends": "./packages/typescript-config/tsconfig.json"
+  "extends": "./packages/typescript-config/tsconfig.json",
+  "compilerOptions": {
+    "paths": {
+      "config": ["packages/config/src/index.ts"]
+    }
+  }
 }
