feat(@toolbox/plguin-react): migrate from turbo to nx

--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -2,6 +2,7 @@
   "extends": "./packages/typescript-config/tsconfig.json",
   "compilerOptions": {
     "paths": {
+      "@toolbox/plugin-react": ["packages/plugin-react/src/index.ts"],
       "config": ["packages/config/src/index.ts"]
     }
   }
