--- a/packages/plugin-react/tsconfig.json
+++ b/packages/plugin-react/tsconfig.json
@@ -5,7 +5,7 @@
     "module": "es2022",
     "forceConsistentCasingInFileNames": true,
     "strict": true,
-    "importHelpers": true,
+    "importHelpers": false,
     "noImplicitOverride": true,
     "noImplicitReturns": true,
     "noFallthroughCasesInSwitch": true,
