--- a/packages/plugin-react/package.json
+++ b/packages/plugin-react/package.json
@@ -29,8 +29,7 @@
     "@toolbox/tsconfig": "workspace:^",
     "@types/node": "20.19.9",
     "get-tsconfig": "^4.12.0",
-    "jsonc-eslint-parser": "^2.1.0",
-    "tsup": "^8.5.0"
+    "jsonc-eslint-parser": "^2.1.0"
   },
   "peerDependencies": {
     "@swc/core": "^1.13.5"
