--- a/packages/config/package.json
+++ b/packages/config/package.json
@@ -8,7 +8,7 @@
   "exports": {
     ".": {
       "types": "./dist/index.d.ts",
-      "default": "./dist/index.js"
+      "default": "./dist/index.esm.js"
     },
     "./package.json": "./package.json"
   },
