--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -3,7 +3,8 @@
   "compilerOptions": {
     "paths": {
       "@toolbox/plugin-react": ["packages/plugin-react/src/index.ts"],
-      "config": ["packages/config/src/index.ts"]
+      "config": ["packages/config/src/index.ts"],
+      "toolbox-dev": ["packages/toolbox-dev/src/index.ts"]
     }
   }
 }
