--- a/packages/config/project.json
+++ b/packages/config/project.json
@@ -5,5 +5,10 @@
   "projectType": "library",
   "tags": ["scope:config"],
   "// targets": "to see all targets run: nx show project config --web",
-  "targets": {}
+  "targets": {
+    "build": {
+      "inputs": ["!{projectRoot}/**/*.md"],
+      "outputs": ["{workspaceRoot}/dist/packages/config"]
+    }
+  }
 }
