--- a/packages/eslint-config/project.json
+++ b/packages/eslint-config/project.json
@@ -3,5 +3,10 @@
   "$schema": "../../node_modules/nx/schemas/project-schema.json",
   "tags": ["type:config"],
   "// targets": "to see all targets run: nx show project eslint-config --web",
-  "targets": {}
+  "targets": {
+    "build": {
+      "inputs": ["!{projectRoot}/**/*.md"],
+      "outputs": ["{workspaceRoot}/dist/packages/eslint-config"]
+    }
+  }
 }
