--- a/packages/plugin-react/package.json
+++ b/packages/plugin-react/package.json
@@ -32,6 +32,9 @@
     "jsonc-eslint-parser": "^2.1.0"
   },
   "peerDependencies": {
-    "@swc/core": "^1.13.5"
+    "@swc/core": "^1.13.5",
+    "rollup": "^4.14.0",
+    "@rollup/pluginutils": "5.3.0",
+    "get-tsconfig": "4.12.0"
   }
 }
