--- a/packages/plugin-react/project.json
+++ b/packages/plugin-react/project.json
@@ -5,5 +5,10 @@
   "projectType": "library",
   "tags": ["scope:plugin"],
   "// targets": "to see all targets run: nx show project @toolbox/plugin-react --web",
-  "targets": {}
+  "targets": {
+    "build": {
+      "inputs": ["!{projectRoot}/**/*.md"],
+      "outputs": ["{workspaceRoot}/dist/packages/plugin-react"]
+    }
+  }
 }
