--- a/.github/ISSUE_TEMPLATE/bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yml
@@ -22,7 +22,7 @@ body:
 
         - 🥇 Link to a [StackBlitz](https://stackblitz.com/) environment
         - 🥈 Link to a GitHub repository
-        - 🥉 Description of project including template, `remix.config.js`, `package.json` scripts, etc.
+        - 🥉 Description of project including template, `toolbox.config.js`, `package.json` scripts, etc.
 
   - type: textarea
     id: reproduction
@@ -36,7 +36,7 @@ body:
     id: system-info
     attributes:
       label: System Info
-      description: Output of `npx envinfo --system --npmPackages '{vite,@remix-run/*}' --binaries --browsers`
+      description: Output of `npx envinfo --system --npmPackages '{@toolbox/*}' --binaries --browsers`
       render: shell
       placeholder: System, Binaries, Browsers
     validations:
