build(@toolbox/config): disable sourceMaps option in swc

--- a/packages/config/.swcrc
+++ b/packages/config/.swcrc
@@ -17,7 +17,7 @@
   "module": {
     "type": "es6"
   },
-  "sourceMaps": true,
+  "sourceMaps": false,
   "exclude": [
     "jest.config.ts",
     ".*\\.spec.tsx?$",
