--- a/packages/config/project.json
+++ b/packages/config/project.json
@@ -7,8 +7,14 @@
   "// targets": "to see all targets run: nx show project config --web",
   "targets": {
     "build": {
+      "cache": true,
       "inputs": ["!{projectRoot}/**/*.md"],
       "outputs": ["{workspaceRoot}/dist/packages/config"]
+    },
+    "lint": {
+      "cache": true,
+      "inputs": ["{projectRoot}/**/*.{ts,tsx}"],
+      "outputs": []
     }
   }
 }
