--- a/packages/config/package.json
+++ b/packages/config/package.json
@@ -5,6 +5,7 @@
   "type": "module",
   "author": "Dazum Dev <dazum.dev@gmail.com>",
   "license": "MIT",
+  "main": "./dist/index.esm.js",
   "exports": {
     ".": {
       "types": "./dist/index.d.ts",
