--- a/packages/eslint-config/project.json
+++ b/packages/eslint-config/project.json
@@ -5,8 +5,9 @@
   "// targets": "to see all targets run: nx show project eslint-config --web",
   "targets": {
     "build": {
+      "cache": true,
       "inputs": ["!{projectRoot}/**/*.md"],
-      "outputs": ["{workspaceRoot}/dist/packages/eslint-config"]
+      "outputs": ["{workspaceRoot}/packages/eslint-config/dist"]
     }
   }
 }
