--- a/packages/plugin-react/package.json
+++ b/packages/plugin-react/package.json
@@ -5,6 +5,7 @@
   "type": "module",
   "author": "Dazum Dev <dazum.dev@gmail.com>",
   "license": "MIT",
+  "main": "./dist/index.esm.js",
   "exports": {
     ".": {
       "types": "./dist/index.d.ts",
@@ -35,6 +36,6 @@
     "@swc/core": "^1.13.5",
     "rollup": "^4.14.0",
     "@rollup/pluginutils": "5.3.0",
-    "get-tsconfig": "4.12.0"
+    "get-tsconfig": "4.13.0"
   }
 }
