--- a/packages/plugin-react/project.json
+++ b/packages/plugin-react/project.json
@@ -7,8 +7,14 @@
   "// targets": "to see all targets run: nx show project @toolbox/plugin-react --web",
   "targets": {
     "build": {
+      "cache": true,
       "inputs": ["!{projectRoot}/**/*.md"],
-      "outputs": ["{workspaceRoot}/dist/packages/plugin-react"]
+      "outputs": ["{workspaceRoot}/packages/plugin-react/dist"]
+    },
+    "lint": {
+      "cache": true,
+      "inputs": ["!{projectRoot}/**/*.md"],
+      "outputs": []
     }
   }
 }
