--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -4,7 +4,8 @@
     "paths": {
       "@toolbox/plugin-react": ["packages/plugin-react/src/index.ts"],
       "@toolbox/config": ["packages/config/src/index.ts"],
-      "@toolbox/dev": ["packages/toolbox-dev/src/cli.ts"]
+      "@toolbox/dev": ["packages/toolbox-dev/src/cli.ts"],
+      "@toolbox/express": ["packages/toolbox-express/src/index.ts"]
     }
   }
 }
