--- a/package.json
+++ b/package.json
@@ -7,7 +7,6 @@
   "license": "MIT",
   "scripts": {
     "nx": "nx",
-    "prepare": "husky",
     "version": "sh .get-version"
   },
   "packageManager": "pnpm@10.19.0",
@@ -23,27 +22,26 @@
     "node": "^20.19.0 || >=22.12.0"
   },
   "devDependencies": {
-    "@nx/eslint": "21.6.5",
-    "@nx/eslint-plugin": "21.6.5",
-    "@nx/js": "21.6.5",
-    "@nx/rollup": "21.6.5",
-    "@nx/workspace": "^21.6.5",
-    "@swc-node/register": "~1.9.1",
-    "@swc/cli": "~0.6.0",
-    "@swc/core": "~1.13.3",
+    "@nx/eslint": "22.0.2",
+    "@nx/eslint-plugin": "22.0.2",
+    "@nx/js": "22.0.2",
+    "@nx/rollup": "22.0.2",
+    "@nx/workspace": "22.0.2",
+    "@swc-node/register": "~1.11.1",
+    "@swc/cli": "~0.7.8",
+    "@swc/core": "~1.14.0",
     "@swc/helpers": "~0.5.11",
     "@types/node": "20.19.9",
-    "@typescript-eslint/eslint-plugin": "^7.16.0",
-    "@typescript-eslint/parser": "^7.16.0",
-    "eslint": "~8.57.0",
-    "eslint-config-prettier": "^10.0.0",
-    "husky": "^9.1.7",
-    "jsonc-eslint-parser": "^2.1.0",
-    "nx": "21.6.5",
-    "prettier": "^3.0.0",
-    "rollup": "^4.14.0",
-    "swc-loader": "0.1.15",
-    "tslib": "^2.3.0",
-    "typescript": "~5.9.2"
+    "@typescript-eslint/eslint-plugin": "^8.46.2",
+    "@typescript-eslint/parser": "^8.46.2",
+    "eslint": "~9.38.0",
+    "eslint-config-prettier": "^10.1.8",
+    "jsonc-eslint-parser": "^2.4.1",
+    "nx": "22.0.2",
+    "prettier": "^3.6.2",
+    "rollup": "^4.52.5",
+    "swc-loader": "0.2.6",
+    "tslib": "^2.8.1",
+    "typescript": "~5.9.3"
   }
 }
